--- a/package.json
+++ b/package.json
@@ -6,7 +6,9 @@
   "dependencies": {
     "parcel-bundler": "^1.12.4"
   },
-  "devDependencies": {},
+  "devDependencies": {
+    "sass": "^1.30.0"
+  },
   "scripts": {
     "dev": "parcel src/index.html",
     "build": "parcel src/index.html"
